fix: refactor MCP initialization to resolve tool registration timing
- Create GlobalMCPManager singleton for early async initialization
- Move MCP initialization to app startup before agent creation
- Refactor ToolRegistry to get tools from global MCP manager
- Remove blocking wait mechanisms in favor of dynamic tool updates
- Fix race condition where MCP tools weren't available when called

This ensures MCP tools are properly registered and available when needed.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,8 @@
 # GitHub Pages Configuration for Alex Documentation
 
 # Site settings
-title: "Alex - AI Software Engineering Assistant"
-description: "高性能普惠的软件工程助手 - High-Performance AI Software Engineering Assistant"
+title: "ALEX - Agile Lightweight EXtensible Code Agent"
+description: "ALEX (Agile Lightweight EXtensible Code Agent) - A lightweight AI code agent focused on core coding capabilities"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site
 
