feat: Enhance version management and npm package structure
This update introduces new Makefile targets and scripts to streamline version management and ensure consistency across npm packages.

- Added `update-version` target to update package versions across all relevant files.
- Introduced `show-version` and `version-check` targets for displaying current versions and checking for inconsistencies.
- Updated `copy-npm-binaries.sh` script for improved logging and error handling during binary copying.
- Refactored `install.js` to dynamically read the version from `package.json`, ensuring consistency.
- Updated package versions to `0.0.4` across all platform-specific packages.
- Enhanced `RELEASE.md` with clearer installation instructions for npm packages.

--- a/npm/alex-darwin-amd64/package.json
+++ b/npm/alex-darwin-amd64/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "alex-code-darwin-arm64",
+  "name": "alex-code-darwin-amd64",
   "version": "0.0.4",
-  "description": "The Darwin ARM64 binary for alex-code.",
+  "description": "The Darwin AMD64 binary for alex-code.",
   "main": "index.js",
   "os": [
     "darwin"
   ],
   "cpu": [
-    "arm64"
+    "amd64"
   ],
   "repository": {
     "type": "git",
