--- a/npm/alex-code/package.json
+++ b/npm/alex-code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alex-code",
-  "version": "1.0.1",
+  "version": "0.0.4",
   "description": "ALEX (Agile Light Easy Xpert Code Agent) is a lightweight AI code agent built in Go, focused on core coding capabilities.",
   "main": "index.js",
   "bin": {
@@ -27,10 +27,10 @@
   },
   "homepage": "https://github.com/cklxx/Alex-Code#readme",
   "optionalDependencies": {
-    "@alex-code/linux-amd64": "1.0.1",
-    "@alex-code/linux-arm64": "1.0.1",
-    "@alex-code/darwin-amd64": "1.0.1",
-    "@alex-code/darwin-arm64": "1.0.1",
-    "@alex-code/windows-amd64": "1.0.1"
+    "alex-code-linux-amd64": "0.0.4",
+    "alex-code-linux-arm64": "0.0.4",
+    "alex-code-darwin-amd64": "0.0.4",
+    "alex-code-darwin-arm64": "0.0.4",
+    "alex-code-windows-amd64": "0.0.4"
   }
 }
