--- a/npm/alex-linux-amd64/package.json
+++ b/npm/alex-linux-amd64/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alex-code/linux-amd64",
-  "version": "1.0.1",
+  "name": "alex-code-linux-amd64",
+  "version": "0.0.4",
   "description": "The Linux AMD64 binary for alex-code.",
   "main": "index.js",
   "os": [
