--- a/npm/alex-windows-amd64/package.json
+++ b/npm/alex-windows-amd64/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@alex-code/windows-amd64",
-  "version": "1.0.1",
+  "name": "alex-code-windows-amd64",
+  "version": "0.0.4",
   "description": "The Windows AMD64 binary for alex-code.",
   "main": "index.js",
   "os": [
