--- a/web/package.json
+++ b/web/package.json
@@ -32,6 +32,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.3",
     "typescript": "^5.6.3",
+    "zod": "^4.1.12",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "@storybook/react-webpack5": "^8.6.14",
     "@storybook/testing-library": "^0.2.1",
     "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.7.5",
