--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -2,14 +2,14 @@ name: Deploy GitHub Pages
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'docs/**'
-      - '.github/workflows/pages.yml'
+      - "docs/**"
+      - ".github/workflows/pages.yml"
   pull_request:
-    branches: [ main ]
+    branches: [main]
     paths:
-      - 'docs/**'
+      - "docs/**"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -28,21 +28,23 @@ concurrency:
 jobs:
   # Build job
   build:
+    env:
+      PAGES_REPO_NWO: cklxx/Alex-Code
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
-        
+
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1'
+          ruby-version: "3.1"
           bundler-cache: true
           working-directory: docs
-          
+
       - name: Create Gemfile
         run: |
           cd docs
@@ -55,19 +57,19 @@ jobs:
           gem "jekyll-default-layout"
           gem "jekyll-titles-from-headings"
           EOF
-          
+
       - name: Install dependencies
         run: |
           cd docs
           bundle install
-          
+
       - name: Build with Jekyll
         run: |
           cd docs
           bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
-          
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
