--- a/web/package.json
+++ b/web/package.json
@@ -25,6 +25,7 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "prism-react-renderer": "^2.4.0",
+    "react-syntax-highlighter": "^15.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
@@ -50,6 +51,7 @@
     "@types/node": "^22.7.5",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@vitejs/plugin-react": "^5.0.4",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
