--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,9 @@
     "e2e:ui": "playwright test --ui"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-virtual": "^3.13.12",
     "clsx": "^2.1.1",
@@ -25,10 +28,10 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "prism-react-renderer": "^2.4.0",
-    "react-syntax-highlighter": "^15.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^2.5.3",
