--- a/web/package.json
+++ b/web/package.json
@@ -23,6 +23,7 @@
     "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.59.0",
     "@tanstack/react-virtual": "^3.13.12",
+    "@uiw/react-markdown-preview": "^5.1.0",
     "clsx": "^2.1.1",
     "immer": "^10.1.1",
     "lucide-react": "^0.451.0",
@@ -30,7 +31,6 @@
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^9.0.1",
     "react-syntax-highlighter": "^15.5.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^2.0.7",
