--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,8 @@
     "build-storybook": "storybook build",
     "chromatic": "chromatic",
     "perf-benchmark": "node scripts/perf-benchmark.ts",
+    "pree2e": "playwright install chromium",
+    "pree2e:ui": "playwright install",
     "e2e": "playwright test",
     "e2e:ui": "playwright test --ui"
   },
