Add China mirror support and setup tooling

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,25 @@ OPENAI_BASE_URL=https://api.openai.com/v1
 ALEX_MODEL=gpt-4
 ALEX_VERBOSE=false
 
+# Sandbox Configuration
+ALEX_SANDBOX_BASE_URL=http://localhost:8090
+
 # Redis Configuration (optional)
 REDIS_URL=
+
+# China Mirror Configuration (uncomment to enable faster builds)
+
+# Use pre-built China sandbox image (recommended for China mainland)
+# No build required - much faster startup!
+# SANDBOX_IMAGE=enterprise-public-cn-beijing.cr.volces.com/vefaas-public/all-in-one-sandbox:latest
+# SANDBOX_SECURITY_OPT=seccomp=unconfined
+
+# NPM Registry (only needed if USE_CHINA_SANDBOX=false)
+# NPM_REGISTRY=https://registry.npmmirror.com/
+
+# PyPI Mirror (only needed if USE_CHINA_SANDBOX=false)
+# PIP_INDEX_URL=https://pypi.tuna.tsinghua.edu.cn/simple
+
+# Alternative mirrors:
+# - NPM: https://mirrors.cloud.tencent.com/npm/
+# - PyPI: https://mirrors.aliyun.com/pypi/simple/
