--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,10 +15,12 @@ services:
       - ALEX_MODEL=${ALEX_MODEL:-gpt-4}
       - ALEX_VERBOSE=${ALEX_VERBOSE:-false}
       - SESSION_STORE_PATH=/data/sessions
+      - ALEX_CRAFT_MIRROR_DIR=/data/crafts
       - REDIS_URL=${REDIS_URL:-}
       - ALEX_SANDBOX_BASE_URL=http://alex-sandbox:8080
     volumes:
       - alex-sessions:/data/sessions
+      - alex-crafts:/data/crafts
       - ./:/workspace:cached  # Mount workspace for development
     restart: unless-stopped
     depends_on:
@@ -38,11 +40,13 @@ services:
     build:
       context: ./web
       dockerfile: Dockerfile
+      args:
+        NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL:-auto}
     container_name: alex-web
-    ports:
-      - "3000:3000"
+    expose:
+      - "3000"
     environment:
-      - NEXT_PUBLIC_API_URL=http://alex-server:8080
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-auto}
       - NODE_ENV=production
     depends_on:
       - alex-server
@@ -83,6 +87,7 @@ services:
       - "8090:8080"
     volumes:
       - ./skills:/workspace/skills:ro
+      - alex-crafts:/workspace/crafts
     restart: unless-stopped
     networks:
       - alex-network
@@ -106,6 +111,8 @@ services:
 
 volumes:
   alex-sessions:
+    driver: local
+  alex-crafts:
     driver: local
   redis-data:
     driver: local
