--- a/web/.env.development
+++ b/web/.env.development
@@ -1,1 +1,5 @@
-NEXT_PUBLIC_ENABLE_MOCK_DATA=1
+# Development environment configuration
+# This file is used when running `npm run dev`
+
+# Backend API URL for development mode
+NEXT_PUBLIC_API_URL=http://localhost:8080
