docs: add local auth db plan

--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,15 @@ ALEX_SANDBOX_BASE_URL=http://localhost:8090
 # Redis Configuration (optional)
 REDIS_URL=
 
+# Authentication (optional)
+AUTH_JWT_SECRET=dev-secret-change-me
+AUTH_ACCESS_TOKEN_TTL_MINUTES=15
+AUTH_REFRESH_TOKEN_TTL_DAYS=30
+AUTH_REDIRECT_BASE_URL=http://localhost:8080
+AUTH_DATABASE_URL=postgres://alex:alex@localhost:5432/alex_auth?sslmode=disable
+# GOOGLE_CLIENT_ID=
+# WECHAT_APP_ID=
+
 # China Mirror Configuration (uncomment to enable faster builds)
 
 # Use pre-built China sandbox image (recommended for China mainland)
