--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,10 @@ AUTH_ACCESS_TOKEN_TTL_MINUTES=15
 AUTH_REFRESH_TOKEN_TTL_DAYS=30
 AUTH_REDIRECT_BASE_URL=http://localhost:8080
 AUTH_DATABASE_URL=postgres://alex:alex@localhost:5432/alex_auth?sslmode=disable
+AUTH_DB_USER=alex
+AUTH_DB_PASSWORD=alex
+AUTH_DB_NAME=alex_auth
+AUTH_DB_PORT=5432
 # GOOGLE_CLIENT_ID=
 # WECHAT_APP_ID=
 
