--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -26,6 +26,8 @@ metadata:
 type: Opaque
 stringData:
   OPENAI_API_KEY: "your-api-key-here"  # Replace with actual key or use sealed-secrets
+  AUTH_JWT_SECRET: "replace-with-strong-secret"
+  AUTH_DATABASE_URL: "postgres://alex:alex@postgres-service:5432/alex_auth?sslmode=disable"
 
 ---
 # ALEX Server Deployment
@@ -76,6 +78,18 @@ spec:
               key: SESSION_STORE_PATH
         - name: REDIS_URL
           value: "redis-service:6379"
+        - name: AUTH_JWT_SECRET
+          valueFrom:
+            secretKeyRef:
+              name: alex-secrets
+              key: AUTH_JWT_SECRET
+        - name: AUTH_DATABASE_URL
+          valueFrom:
+            secretKeyRef:
+              name: alex-secrets
+              key: AUTH_DATABASE_URL
+        - name: AUTH_REDIRECT_BASE_URL
+          value: "https://alex.yourdomain.com"
         resources:
           requests:
             cpu: "500m"
