Document analytics verification checks

--- a/web/.env.local.example
+++ b/web/.env.local.example
@@ -4,3 +4,9 @@
 # Development: http://localhost:8080
 # Production: https://your-alex-server.com
 NEXT_PUBLIC_API_URL=http://localhost:8080
+
+# PostHog analytics configuration
+# Provide the project API key from https://app.posthog.com/project/<id>/settings/project
+NEXT_PUBLIC_POSTHOG_KEY=
+# Uncomment to point to a self-hosted PostHog instance
+# NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
