--- a/web/package.json
+++ b/web/package.json
@@ -28,6 +28,7 @@
     "immer": "^10.1.1",
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
+    "posthog-js": "^1.290.0",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
