--- a/web/package.json
+++ b/web/package.json
@@ -29,6 +29,7 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "posthog-js": "^1.292.0",
+    "qrcode": "^1.5.4",
     "prism-react-renderer": "^2.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
