--- a/web/package.json
+++ b/web/package.json
@@ -29,8 +29,8 @@
     "lucide-react": "^0.451.0",
     "next": "14.2.15",
     "posthog-js": "^1.292.0",
-    "qrcode": "^1.5.4",
     "prism-react-renderer": "^2.4.0",
+    "qrcode": "^1.5.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-syntax-highlighter": "^15.5.0",
@@ -54,6 +54,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/node": "^22.7.5",
+    "@types/qrcode": "^1.5.6",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.11",
