Highlight auto-review gaps for continue actions

--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,6 @@ AUTH_DB_PORT=5432
 # Alternative mirrors:
 # - NPM: https://mirrors.cloud.tencent.com/npm/
 # - PyPI: https://mirrors.aliyun.com/pypi/simple/
+
+# Frontend/internal feature toggles
+NEXT_PUBLIC_INTERNAL_AUTO_REVIEW=0
