--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,7 @@ AUTH_DB_PASSWORD=alex
 AUTH_DB_NAME=alex_auth
 AUTH_DB_PORT=5432
 # GOOGLE_CLIENT_ID=
+# GOOGLE_CLIENT_SECRET=
 # WECHAT_APP_ID=
 
 # China Mirror Configuration (uncomment to enable faster builds)
