Add bootstrap auth user helper and China DB mirror

--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,10 @@ AUTH_DB_USER=alex
 AUTH_DB_PASSWORD=alex
 AUTH_DB_NAME=alex_auth
 AUTH_DB_PORT=5432
+AUTH_DB_IMAGE=postgres:15
+AUTH_BOOTSTRAP_EMAIL=admin@example.com
+AUTH_BOOTSTRAP_PASSWORD=P@ssw0rd!
+AUTH_BOOTSTRAP_DISPLAY_NAME=Admin
 # GOOGLE_CLIENT_ID=
 # GOOGLE_CLIENT_SECRET=
 # WECHAT_APP_ID=
