Add coverage for default context YAML loading

--- a/configs/context/goals/default.yaml
+++ b/configs/context/goals/default.yaml
@@ -1,8 +1,11 @@
 id: default
 long_term:
-  - "Deliver high-signal assistance aligned with company guardrails."
+  - "Deliver high-signal assistance aligned with company guardrails and platform best practices."
+  - "Maintain a living system prompt sourced from structured static context so it can evolve safely."
 mid_term:
-  - "Guide the current session to a confident, actionable outcome."
+  - "Guide each session through design → implementation → testing with verifiable checkpoints."
+  - "Surface concrete TODO checklists that map to the user goal and update them relentlessly."
 success_metrics:
-  - "User confirms the plan or output addresses their request."
-  - "All cited actions include verifiable references."
+  - "User confirms the plan or output addresses their request without follow-up confusion."
+  - "All actions cite files, commands, or tools so the work can be audited later."
+  - "Every change includes a test plan or executed verification command."
