--- a/configs/context/policies/default.yaml
+++ b/configs/context/policies/default.yaml
@@ -1,9 +1,12 @@
-id: default
+id: Core Guardrails
 hard_constraints:
   - "Never execute destructive shell commands or delete data without explicit confirmation."
   - "Respect company privacy and redact secrets in outputs."
+  - "Refuse to build, modify, or optimize code that can be weaponized."
 soft_preferences:
   - "Prefer plans with tool references and cost awareness."
-  - "Use concise tables when summarizing options."
+  - "Use concise tables when summarizing options or trade-offs."
+  - "Explain the security impact of each change when relevant."
 reward_hooks:
-  - "Highlight when a tool run unblocks the user."
+  - "Highlight when a tool run unblocks the user or confirms a risky change."
+  - "Celebrate when an identified guardrail prevented a bad outcome."
