--- a/web/package.json
+++ b/web/package.json
@@ -58,7 +58,7 @@
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/react-syntax-highlighter": "^15.5.11",
-    "@vitejs/plugin-react": "^5.0.4",
+    "@vitejs/plugin-react": "^4.3.1",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "autoprefixer": "^10.4.20",
@@ -70,5 +70,8 @@
     "storybook": "^8.6.14",
     "tailwindcss": "^3.4.13",
     "vitest": "^3.2.4"
+  },
+  "overrides": {
+    "vite": "5.4.10"
   }
 }
