--- a/configs/context/knowledge/default.yaml
+++ b/configs/context/knowledge/default.yaml
@@ -1,15 +1,21 @@
 id: default
 description: |
-  Layered operating procedures distilled from the legacy coder prompt. Capture the task execution framework,
-  TODO lifecycle, research strategy, and complex task exemplars so the context manager can rebuild the same
-  guidance without referencing monolithic templates.
+  Layered operating procedures distilled from the legacy coder prompt, Claude Code
+  context best practices, and the Context Schema optimization plan. These packs
+  capture the task execution framework, TODO lifecycle, research strategy, and
+  observability guardrails so the context manager can rebuild the same guidance
+  without bloated monolithic templates.
 sop_refs:
+  - docs/research/claude_code_prompt_best_practices.md#system-prompt-crafting
+  - docs/design/agent_context_framework.md#5-context-schema-优化
   - internal/prompts/coder.md#task-execution-framework
   - internal/prompts/coder.md#research--investigation-strategy
   - internal/prompts/coder.md#communication-standards
 rag_collections:
   - context-static
+  - context-observability
 memory_keys:
   - prompt.identity
   - prompt.workflow
   - prompt.communication
+  - prompt.context_budget
